--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,12 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');
+
 html,
 body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Arimo', sans-serif;
 }
+
+.navbar {
+  background-color: #FFF6BD !important;
+  border-bottom: #000000 2px solid;
+}
+
+.navbar-brand {
+  color: black !important;
+}
+
 
 .save-note {
   display: none;
+}
+
+h5 a {
+  color: black;
+}
+
+h5 a:hover {
+  color:#757575;
+  text-decoration: none;
 }
 
 .icons i {
@@ -14,6 +36,7 @@ body {
   margin-right: 15px;
   font-size: 1.5rem;
   cursor: pointer;
+  color: black !important;
 }
 
 .note-textarea,
