--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,22 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Arimo&display=swap");
 
 html,
 body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Arimo', sans-serif;
+  font-family: "Arimo", sans-serif;
 }
 
 .navbar {
-  background-color: #FFF6BD !important;
+  background-color: #fff6bd !important;
   border-bottom: #000000 2px solid;
 }
 
 .navbar-brand {
   color: black !important;
 }
-
 
 .save-note {
   display: none;
@@ -27,7 +26,7 @@ h5 a {
 }
 
 h5 a:hover {
-  color:#757575;
+  color: #757575;
   text-decoration: none;
 }
 
@@ -98,4 +97,30 @@ h5 a:hover {
   border-right: none;
   padding: 20px;
   cursor: pointer;
+}
+
+.modal {
+  display: none;
+}
+
+#backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.75);
+  z-index: 10;
+  pointer-events: none;
+  display: none;
+}
+
+#backdrop.visible {
+  display: block;
+  pointer-events: all;
+}
+
+.modal.visible {
+  display: block;
+  animation: fade-slide-in 0.3s ease-out forwards;
 }
