--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -124,3 +124,12 @@ h5 a:hover {
   display: block;
   animation: fade-slide-in 0.3s ease-out forwards;
 }
+
+@keyframes fade-slide-in {
+  from {
+    transform: translateY(-5rem);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
